{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 3291,
  "lineage": "70bd96ee-8ea8-3268-7345-eccb45cb1155",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "e-learning-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cbe813170217dff6",
            "domain": "vpc",
            "id": "eipalloc-0cbe813170217dff6",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-3-9-63-135.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.9.63.135",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "e-learning-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:internet-gateway/igw-0800a1d9f066a733f",
            "id": "igw-0800a1d9f066a733f",
            "owner_id": "492367642859",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-095896d9489ec74cf"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "e-learning-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/e-learning-alb/84793cb0d5f2da93",
            "arn_suffix": "app/e-learning-alb/84793cb0d5f2da93",
            "desync_mitigation_mode": "defensive",
            "dns_name": "e-learning-alb-1037266258.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/e-learning-alb/84793cb0d5f2da93",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "e-learning-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0027e08a097561b89"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04d54cb08782294cb"
              },
              {
                "subnet_id": "subnet-0ac89eede08a96279"
              }
            ],
            "subnets": [
              "subnet-04d54cb08782294cb",
              "subnet-0ac89eede08a96279"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-095896d9489ec74cf",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.e-learning-alb-sg",
            "aws_subnet.e-learning-pub-sub1",
            "aws_subnet.e-learning-pub-sub2",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "e-learning-alb-http-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:listener/app/e-learning-alb/84793cb0d5f2da93/07aba028bc2b745e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:listener/app/e-learning-alb/84793cb0d5f2da93/07aba028bc2b745e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/e-learning-alb/84793cb0d5f2da93",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.e-learning-alb",
            "aws_security_group.e-learning-alb-sg",
            "aws_subnet.e-learning-pub-sub1",
            "aws_subnet.e-learning-pub-sub2",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "e-learning-alb-https-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:listener/app/e-learning-alb/84793cb0d5f2da93/269a541c255387da",
            "certificate_arn": "arn:aws:acm:eu-west-2:492367642859:certificate/e267e523-e689-4293-a88f-37c5577bf1d5",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:targetgroup/e-learning-alb-tg/de9b520329deeb2f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:listener/app/e-learning-alb/84793cb0d5f2da93/269a541c255387da",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/e-learning-alb/84793cb0d5f2da93",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.ecs-acm-cert",
            "aws_lb.e-learning-alb",
            "aws_lb_target_group.e-learning-alb-tg",
            "aws_security_group.e-learning-alb-sg",
            "aws_subnet.e-learning-pub-sub1",
            "aws_subnet.e-learning-pub-sub2",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "e-learning-alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:targetgroup/e-learning-alb-tg/de9b520329deeb2f",
            "arn_suffix": "targetgroup/e-learning-alb-tg/de9b520329deeb2f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:targetgroup/e-learning-alb-tg/de9b520329deeb2f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "e-learning-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-095896d9489ec74cf"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "e-learning-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cbe813170217dff6",
            "connectivity_type": "public",
            "id": "nat-03bf2d396ade56060",
            "network_interface_id": "eni-05079a45491345d8c",
            "private_ip": "10.0.9.31",
            "public_ip": "3.9.63.135",
            "subnet_id": "subnet-04d54cb08782294cb",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.e-learning-eip",
            "aws_internet_gateway.e-learning-igw",
            "aws_subnet.e-learning-pub-sub1",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "e-learning-priv-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:route-table/rtb-0eb13816676c9a47a",
            "id": "rtb-0eb13816676c9a47a",
            "owner_id": "492367642859",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03bf2d396ade56060",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-095896d9489ec74cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.e-learning-eip",
            "aws_internet_gateway.e-learning-igw",
            "aws_nat_gateway.e-learning-ngw",
            "aws_subnet.e-learning-pub-sub1",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "e-learning-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:route-table/rtb-05643832aa6b0c514",
            "id": "rtb-05643832aa6b0c514",
            "owner_id": "492367642859",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0800a1d9f066a733f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-095896d9489ec74cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.e-learning-igw",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e-learning-priv1-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0325a787108c1b2e3",
            "route_table_id": "rtb-0eb13816676c9a47a",
            "subnet_id": "subnet-03ed68a9d3de8a268"
          },
          "dependencies": [
            "aws_eip.e-learning-eip",
            "aws_internet_gateway.e-learning-igw",
            "aws_nat_gateway.e-learning-ngw",
            "aws_route_table.e-learning-priv-rt",
            "aws_subnet.e-learning-priv-sub1",
            "aws_subnet.e-learning-pub-sub1",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e-learning-priv2-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097f6245d7215186d",
            "route_table_id": "rtb-0eb13816676c9a47a",
            "subnet_id": "subnet-028e6d743926f923e"
          },
          "dependencies": [
            "aws_eip.e-learning-eip",
            "aws_internet_gateway.e-learning-igw",
            "aws_nat_gateway.e-learning-ngw",
            "aws_route_table.e-learning-priv-rt",
            "aws_subnet.e-learning-priv-sub2",
            "aws_subnet.e-learning-pub-sub1",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e-learning-pub1-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db4e51887d137a23",
            "route_table_id": "rtb-05643832aa6b0c514",
            "subnet_id": "subnet-04d54cb08782294cb"
          },
          "dependencies": [
            "aws_internet_gateway.e-learning-igw",
            "aws_route_table.e-learning-pub-rt",
            "aws_subnet.e-learning-pub-sub1",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e-learning-pub2-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1f633c320ccaf00",
            "route_table_id": "rtb-05643832aa6b0c514",
            "subnet_id": "subnet-0ac89eede08a96279"
          },
          "dependencies": [
            "aws_internet_gateway.e-learning-igw",
            "aws_route_table.e-learning-pub-rt",
            "aws_subnet.e-learning-pub-sub2",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "e-learning-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:security-group/sg-0027e08a097561b89",
            "description": "Allow TLS, HTTP \u0026 SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0027e08a097561b89",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls_http_ssh",
            "name_prefix": "",
            "owner_id": "492367642859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls_http"
            },
            "tags_all": {
              "Name": "allow_tls_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-095896d9489ec74cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "e-learning-ecs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:security-group/sg-03b5f664abd991256",
            "description": "Allow TCP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b5f664abd991256",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TCP from alb",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0027e08a097561b89"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "e-learning-ecs-sg",
            "name_prefix": "",
            "owner_id": "492367642859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "e-learning-ecs-sg"
            },
            "tags_all": {
              "Name": "e-learning-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-095896d9489ec74cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.e-learning-alb-sg",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgresql-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:security-group/sg-0a92ca10a1eae4713",
            "description": "Allows traffic only on port 5432 with ecs cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a92ca10a1eae4713",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ecs security group to db",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03b5f664abd991256"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "postgresql-rds-sg",
            "name_prefix": "",
            "owner_id": "492367642859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-instance-sec-group"
            },
            "tags_all": {
              "Name": "db-instance-sec-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-095896d9489ec74cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.e-learning-alb-sg",
            "aws_security_group.e-learning-ecs-sg",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "e-learning-priv-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-03ed68a9d3de8a268",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ed68a9d3de8a268",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "e-learning-priv-sub1"
            },
            "tags_all": {
              "Name": "e-learning-priv-sub1"
            },
            "vpc_id": "vpc-095896d9489ec74cf"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "e-learning-priv-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-028e6d743926f923e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028e6d743926f923e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "e-learning-priv-sub2"
            },
            "tags_all": {
              "Name": "e-learning-priv-sub2"
            },
            "vpc_id": "vpc-095896d9489ec74cf"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "e-learning-pub-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-04d54cb08782294cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d54cb08782294cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "e-learning-pub-sub1"
            },
            "tags_all": {
              "Name": "e-learning-pub-sub1"
            },
            "vpc_id": "vpc-095896d9489ec74cf"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "e-learning-pub-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-0ac89eede08a96279",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac89eede08a96279",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "e-learning-pub-sub2"
            },
            "tags_all": {
              "Name": "e-learning-pub-sub2"
            },
            "vpc_id": "vpc-095896d9489ec74cf"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "e-learning",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:vpc/vpc-095896d9489ec74cf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03e40164ef77d5e17",
            "default_route_table_id": "rtb-0fd709b7973246ec3",
            "default_security_group_id": "sg-00d4f4b7de4741bd5",
            "dhcp_options_id": "dopt-07de7887fa266f1ce",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-095896d9489ec74cf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fd709b7973246ec3",
            "owner_id": "492367642859",
            "tags": {
              "Name": "e-learning"
            },
            "tags_all": {
              "Name": "e-learning"
            }
          }
        }
      ]
    }
  ]
}